# sdk

./: CMakeLists.txt  README.md  build_release.sh  highcontrol  highcontroller.cpp  lowcontroller.cpp
config/: dds.xml  dds_local.xml  e1_ac.yaml  hwconfig.yaml  ning_user.yaml
include/: DDSWrapper.h  RotationTools.h  Types.h  common.h  highcontroller.h  lowcontroller.h
include/dds/: version.h
include/idl/: Robot_controlcmd.hpp  Robot_handTransfer.hpp  Robot_motorcmd.hpp  Robot_setmode.hpp  Robot_status.hpp
lib/x86_64/: libddscxx.so.0.11.0
policy/: policy_user.onnx  policy_user.rknn  policy_walk.onnx  policy_walk.rknn
